[package]
name = "determinishtic"
version = "0.1.1"
edition = "2024"
description = "Blend deterministic Rust code with LLM-powered reasoning"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikomatsakis/determinishtic"
documentation = "https://docs.rs/determinishtic"
readme = "README.md"
keywords = ["llm", "ai", "mcp", "acp", "async"]
categories = ["asynchronous", "development-tools"]

[dependencies]
# ACP/MCP integration
sacp = "11.0.0-alpha.1"

# Serialization and schema
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["sync", "rt"] }
futures = "0.3"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
sacp-conductor = "11.0.0-alpha.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sacp-tokio = "11.0.0-alpha.1"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "summarize_docs"
path = "examples/summarize_docs.rs"
